trunk/Archive2/52/66855b8ada4e26/output
main.cpp: In function 'int main()':
main.cpp:16:96: error: expected '}' before ';' token
         int array[4][5] =  {{16,22,99,4},{18,-258,4,101},{5,98,105,6},{15,2,45,33},{88,72,16,3};
                                                                                                ^
main.cpp:16:96: error: too many initializers for 'int [4][5]'
main.cpp:25:7: error: expected '(' before 'array'
    if array[i][j]>max;}
       ^
main.cpp: At global scope:
main.cpp:31:4: error: 'cout' does not name a type
    cout << "The maximun of the 4x5 array is: " << max << endl;
    ^
main.cpp:32:1: error: expected declaration before '}' token
 }              
 ^
